--- a/settings.json
+++ b/settings.json
@@ -6,7 +6,7 @@
   },
 
   "server": {
-    "ip": "NIGHTLIGHT-ayM7.aternos.me", 
+    "ip": "NIGHTLIGHTREBOOT.aternos.me", 
     "port": 11223,   
     "version": "1.12.1"   
   },
