--- a/settings.json
+++ b/settings.json
@@ -6,8 +6,8 @@
   },
 
   "server": {
-    "ip": "NIGHTLIGHTREBORN.aternos.me", 
-    "port": 11223,   
+    "ip": "nightlightsmp.net", 
+    "port": 25565,   
     "version": "1.12.1"   
   },
   
